# robot_framework

./: .gitattributes  .gitignore  pyproject.toml  readme.md
e2e/testcases/: e2e_sample.robot
mobile/keywords/: form_screen_keywords.robot  login_screen_keywords.robot  mobile_common_keywords.robot  nativeAlert_keywords.robot  tabBar_keywords.robot
mobile/resources/: init.robot
mobile/resources/config/sit/: env_config.robot  test_account.robot
mobile/resources/locators/: form_screen_locators.robot  login_screen_locators.robot
mobile/testcases/: mobile_sample.robot
web/keywords/: home_page_keywords.robot  login_page_keywords.robot  web_common_keywords.robot
web/resources/: init.robot
web/resources/config/sit/: env_config.robot
web/resources/locators/: home_page_locators.robot  login_page_locators.robot
web/testcases/: web_sample.robot
